<resources>
    <string name="app_name">yurta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre de usuario</string>
    <string name="nav_header_subtitle">Nombre de la obra</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_obra">Obra</string>
    <string name="menu_almacen">Almácen</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_acerca_de">Acerca de</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_perfil">Usuario</string>
    <string name="menu_salir">Salir</string>

    <string name="login_title">LOGIN</string>

    <string name="url">http://10.0.0.8:8000/api/</string>
    <string name="login"></string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detalle_pedido">DetallePedidoActivity</string>
    <string name="subtitulo_categorias">Todas las categorias</string>
    <string name="snackbar_materiales">No hay materiales seleccionados</string>

    <string name="snackbar_almacen">Ningun material actualizado</string>
    <string name="alert_red">Red</string>
    <string name="alert_red_body">Sin acceso a internet</string>
    <string name="alert_red_button">Configurar</string>
    <string name="alert_ok">ok</string>
    <string name="categoria_petreos">Pétreos</string>
    <string name="categoria_metalicos">Metálicos</string>
    <string name="categoria_organicos">Orgánicos</string>
    <string name="categoria_sinteticos">Sintéticos</string>
</resources>
