<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group  android:id="@+id/group_1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_obra"
            android:icon="@drawable/ic_obra"
            android:title="@string/menu_obra"
            />
        <item
            android:id="@+id/nav_almacen"
            android:icon="@drawable/ic_almacen"
            android:title="@string/menu_almacen" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_pedidos"
            android:title="@string/menu_pedidos" />
        <item
            android:id="@+id/nav_ayuda"
            android:icon="@drawable/ic_menu_ayuda"
            android:title="@string/menu_ayuda" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_acerca_de" />
    </group>
    <group android:id="@+id/group_2" android:checkableBehavior="single">
        <item android:title="Configuracion">
            <menu>
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/menu_ajustes" />
                <item
                    android:id="@+id/nav_salir"
                    android:icon="@drawable/ic_cerrar_sesion"
                    android:title="@string/menu_salir" />
            </menu>
        </item>
    </group>
</menu>
