<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_almacen">

    <fragment
        android:id="@+id/nav_almacen"
        android:name="com.itoaxaca.yurta.ui.almacen.AlmacenFragment"
        android:label="@string/menu_almacen"
        tools:layout="@layout/fragment_almacen" />
    <fragment
        android:id="@+id/nav_pedidos"
        android:name="com.itoaxaca.yurta.ui.pedidos.PedidosFragment"
        android:label="@string/menu_pedidos"
        tools:layout="@layout/fragment_pedidos" />

    <fragment
        android:id="@+id/nav_ayuda"
        android:name="com.itoaxaca.yurta.ui.ayuda.AyudaFragment"
        android:label="@string/menu_ayuda"
        tools:layout="@layout/fragment_ayuda" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.itoaxaca.yurta.ui.acercade.AboutFragment"
        android:label="@string/menu_acerca_de"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.itoaxaca.yurta.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.itoaxaca.yurta.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>